2008-08-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer-db.c
	* src/tracker-indexer/tracker-indexer.c:
	Using the new method also here to obtain path and name also here.
	
2008-08-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-file-utils.[ch]
	(tracker_file_get_path_and_name): New function to get the path and
	name of an uri. It removes some duplicate code and uses g_file
	to parse the path, so we can fix "x//y" in uris.
	
	* src/trackerd/tracker-db.c
	* src/trackerd/tracker-files.c: Using the new method, instead of
	the old code.
	
	* tests/libtracker-common/tracker-file-utils-test.c: Fixed minor
	things in previous tests and added test for the new method.
	

2008-08-25  Mikael Ottela   <mikael.ottela@ixonos.com>
	
	* src/tracker-extract/tracker-extract-gstreamer.c: Gstreamer
	extractor extracts now also images.	

2008-08-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-extract/Makefile.am:
	* src/tracker-extract/tracker-extract-ps.c: Fix up symbol not found
	that prevented the PS module to be loaded.
	* src/tracker-extract/tracker-extract.c (initialize_extractors):
	Provide a better error message if a module can't be loaded.

2008-08-22  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: Handle situations where the
	source or target are not monitored and emit the appropriate
	signals up the stack.
	
	* src/trackerd/tracker-processor.c: Check the source AND the
	target to see if they should be ignored or not when we get MOVE
	monitor events. If both are ignored, we do nothing, if source is
	ignored we create the new file in the database, if target is
	ignored we delete the old file in the database, if both are valid
	we do a simple move in the database. I say simple, it isn't that
	simple. :)

2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-dbus.c: Fix marshaller for Finished signal.
